--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(CAT_CS
         Week01/Vector/5Medium.cpp
-        Week01/Vector/Vector.cpp)
+        Week01/Vector/Vector.cpp
+        Week02/SLL/SLL.h
+        Week02/SLL/SLL.cpp
+        Week02/test.cpp)
